v0.5.2: Fix layout issue for Firefox

--- a/permission_viewer.css
+++ b/permission_viewer.css
@@ -1,5 +1,5 @@
 div.permission-viewer {
-  max-width: fit-content;
+  max-width: max-content;
   margin: auto 5px;
 }
 
